--- a/scss/blocks/_main_header_down.scss
+++ b/scss/blocks/_main_header_down.scss
@@ -28,19 +28,23 @@
             font-size: 18px;
             text-align: center;
             line-height: 25px;
-            color: #47474F;
+            color: black;
         }
 
         a{
             width: 159px;
             height: 53px;
-            border: 1px solid #47474F;
+            border: 0.5px solid #47474F;
             padding: 17px 0px;
             text-align: center;
             font-weight: 100;
             font-size: 14px;
             line-height: 20px;
-            color: #47474F;
+            color: black;
+        }
+
+        a:hover{
+            box-shadow: 0px 0px 5px 1px #47474F;
         }
     }
 }
