--- a/scss/blocks/_main_header_down.scss
+++ b/scss/blocks/_main_header_down.scss
@@ -57,15 +57,16 @@
                 padding: 0px 10px;
 
                 p{
-                    font-size: 10px;
+                    font-size: 12px;
                     line-height: 14px;
+                    font-weight: 400;
                 }
                 
                 a{
-                    width: 80px;
-                    height: 25px;
+                    width: 100px;
+                    height: 35px;
                     border: 1px solid #47474F;
-                    padding: 11px 0px;
+                    padding: 15px 0px;
                     font-size: 8px;
                     line-height: 0px;
                 }
@@ -73,8 +74,8 @@
             }
 
             img{
-                width: 35px;
-                height: 35px;
+                width: 38px;
+                height: 38px;
                 bottom: 31px;
             }
         }
