--- a/scss/blocks/_nav.scss
+++ b/scss/blocks/_nav.scss
@@ -1,24 +1,23 @@
 nav{
     width: 100%;
-    height: 70px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-top: 50px;
-    padding-bottom: 40px;
     background-color: #fff;
+    padding-top: 18px;
+    padding-bottom: 18px;
 
-    div{
+    .logo{
         width: 155px;
         height: 70px;
         display: flex;
-        justify-content: center;
+        justify-content: start;
         align-items: center; 
         gap: 18px;
 
         h1{
             font-weight: 400;
-            font-size: 22px;
+            font-size: 20px;
             line-height: 38px;
             color: black;
             text-transform: uppercase;
@@ -50,10 +49,10 @@ nav{
 @media (max-width: 448px) {
    nav{
         width: 100%;
-        padding-top: 40px;
-        padding-bottom: 30px;
+        padding-top: 2px;
+        padding-bottom: 2px;
 
-        div{
+        .logo{
             gap: 10px;
             h1{
                 font-weight: 400;
