--- a/scss/blocks/_main_header.scss
+++ b/scss/blocks/_main_header.scss
@@ -53,6 +53,7 @@
             h1{
                 font-size: 24px;
                 line-height: 23px;
+                font-weight: 400;
             }
 
             div{
