--- a/scss/blocks/_nav.scss
+++ b/scss/blocks/_nav.scss
@@ -87,11 +87,49 @@ nav{
 @media (min-width: 449px) and (max-width: 768px) {
     nav{
         width: 100%;
-        padding-top: 40px;
-        padding-bottom: 30px;
+        padding-top: 7px;
+        padding-bottom: 7px;
 
-        div{
+        .logo{
             gap: 14px;
+            h1{
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 38px;
+                color: black;
+                text-transform: uppercase;
+            }
+
+            img{
+                width: 40px;
+                height: 40px;
+            }
+
+        }
+
+        ul{
+            display: flex;
+            gap: 10px;
+    
+            a{
+                font-weight: 400;
+                color: #404040;
+                font-size: 8px;
+                line-height: 20px;
+                text-transform: uppercase;
+            }
+        }
+   }
+}
+
+@media (min-width: 769px) and (max-width: 1200px) {
+    nav{
+        width: 100%;
+        padding-top: 12px;
+        padding-bottom: 12px;
+
+        .logo{
+            gap: 16px;
             h1{
                 font-weight: 400;
                 font-size: 16px;
@@ -109,23 +147,15 @@ nav{
 
         ul{
             display: flex;
-            gap: 10px;
+            gap: 30px;
     
             a{
                 font-weight: 400;
                 color: #404040;
-                font-size: 10px;
+                font-size: 11px;
                 line-height: 20px;
                 text-transform: uppercase;
             }
         }
    }
-}
-
-@media (min-width: 769px) and (max-width: 1200px) {
-    nav{
-        width: 100%;
-        padding-top: 50px;
-        padding-bottom: 40px;
-    }
 }
