--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,6 +2,7 @@
 @import "./blocks/main_header";
 @import "./blocks/main_header_down";
 @import "./blocks/main_header_end";
+@import "./blocks/main_box";
 
 *{
     margin: 0;
@@ -16,6 +17,7 @@
     padding-left: 250px;
     padding-right: 250px;
 }
+
 
 @media (max-width: 448px) {
     .container{
